# django-tutorial

./: pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/polls/: models.py  tests.py  views.py
mysite/polls/migrations/: 0001_initial.py
mysite/polls/templates/polls/: index.html
mysite/templates/admin/: base_site.html
