[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["slow-query <450712+slow-query@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 128
